feat: add OTP reset